corrigindo erros de portuges

--- a/docs/Base/1.5.IniciativasExtras.md
+++ b/docs/Base/1.5.IniciativasExtras.md
@@ -6,7 +6,7 @@ O grupo desenvolveu um heatmap com o objetivo de encontrar o melhor horário par
 
 Decidimos que Segunda-Feira das 20:00 às 21:00 é o melhor horário para nos reunirmos. 
 
-Acesso da planilha: [Heatmap](https://docs.google.com/spreadsheets/d/11hrpBMybRPjnWFFtlIbt_Z8uC3M4b6249Kwg9niy_0g/edit?gid=167832767#gid=167832767)
+Acesso à planilha: [Heatmap](https://docs.google.com/spreadsheets/d/11hrpBMybRPjnWFFtlIbt_Z8uC3M4b6249Kwg9niy_0g/edit?gid=167832767#gid=167832767)
 
 ![](../Imagens/heatmap.png)
 
@@ -20,7 +20,7 @@ Figura 1 - Heatmap (Autor: Rodrigo Gontijo)
 
 Com objetivo de manter claro quais tarefas ja foram realizadas, e quais precisam ser realizadas, foram criadas issues para cada atividade da entrega 1.
 
-Acesso para as issues: [Issues](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues)
+Acesso às issues: [Issues](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues)
 
 
 ![](../Imagens/issues.png)
