--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -24,7 +24,7 @@ Comprobatórios se darão na forma de links aos commits realizados no Github, os
 | Rodrigo Orlandi | 1. Participação na fase de Unpack; <br> 2. Participação na fase de Sketch; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch [link - ADICIONAR DEPOIS DO COMMIT]; <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing), Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link) |
 | Rodrigo Gontijo  |    |    |   |
 | Henrique Galdino |    |    |   |
-| João Marques     |    |    |   |
+| João Marques     |1. Participação na fase de Unpack; 2. Participação na fase de Protótipo    | Boa   | 1. Reunião gravada pelo Google Meet do dia 07/04/2025 conforme [link](https://youtu.be/E5UFk_MEU1g?si=38y0W7haSOCdGYPK); 2. Commit disponível em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/91316d340b470e88069ff86bb6d738b78fab9dbb), [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/8b8ff1844cfa689e8512e9abfec56e040ac2a45f) e [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/7e9a7887a66bd81e9cd2b7f7b620f6afdbca9477) |
 | João Paulo       |    |    |   |
 | Fernando Gabriel |1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision    |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)    |
 | Júlio César      |   1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision  |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)  |
@@ -48,7 +48,7 @@ Fonte: Rodrigo Orlandi(Autor)
 | Rodrigo Orlandi |  1. Participação na implementação do documento de Rich Pictures e na realização; <br> 2. Implementação do 5W2H e de seu artefato <br> 3. Elaboração de documentos de apoio para o projeto. | Boa |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 2. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/61aa8c4b736dca9dc1fdbabe84ff4cee676cd871); <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing) |
 | Rodrigo Gontijo  |    |    |   |
 | Henrique Galdino |    |    |   |
-| João Marques     |    |    |   |
+| João Marques     |1. Participação na realização do Rich Picture; 2. Participação da implementação do Glossário e seu documento.    | Regular   | Implementação  [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/2be71ebafa3e3bd83ded05c7c74b73adf2a4033e);  |
 | João Paulo       |    |    |   |
 | Fernando Gabriel | 1. Participação da implementação do Diagrama Causa-Efeito    |  Regular   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);   |
 | Júlio César      |  1. Participação da implementação do Diagrama Causa-Efeito  |  Regular  |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);  |
@@ -94,3 +94,4 @@ Fonte: Rodrigo Orlandi(Autor)
 | 1.0    | Elaboração do documento | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | | 11/04/2025 | |
 | 1.1    | Adição Parte Júlio | [Julio Cesar](https://github.com/Julio1099) | | 11/04/2025 | |
 | 1.2    | Adição Parte fernando | [Fernando Gabriel](https://github.com/show-dawn) | | 11/04/2025 | |
+| 1.3    | Adição Parte João Marques | [Joao Victor Marques](https://github.com/jmarquees) | | 11/04/2025 | |
