--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -28,9 +28,9 @@ Comprobatórios se darão na forma de links aos commits realizados no Github, os
 | João Paulo       |    |    |   |
 | Fernando Gabriel |1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision    |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)    |
 | Júlio César      |   1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision  |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)  |
-| Matheus Ferreira |    |    |   |
+| Matheus Ferreira | 1. Participação na fase de Test/Validate   | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ef173fa69101686d2a1e8612af48a32f4cb07189)  |
 | Vitor Pereira    |    |    |   |
-| Igor Thiago      |    |    |   |
+| Igor Thiago      | 1. Participação na fase de Test/Validate   | Boa    | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ef173fa69101686d2a1e8612af48a32f4cb07189) |
 
 /// caption | <
 Tabela 2 — Contribuições da equipe no foco de Design Sprint.
@@ -52,9 +52,9 @@ Fonte: Rodrigo Orlandi(Autor)
 | João Paulo       |    |    |   |
 | Fernando Gabriel | 1. Participação da implementação do Diagrama Causa-Efeito    |  Regular   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);   |
 | Júlio César      |  1. Participação da implementação do Diagrama Causa-Efeito  |  Regular  |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);  |
-| Matheus Ferreira |    |    |   |
+| Matheus Ferreira | 1. Participação da implementação do Glossário   | Boa   | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5bcb433188cbbfaf8af03e171355b91e287ff2c5);  |
 | Vitor Pereira    |    |    |   |
-| Igor Thiago      |    |    |   |
+| Igor Thiago      | 1. Participação da implementação do Plano de Riscos   | Boa   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/e8241803e61ff927d820d3e6d417741f061fb3d1);  |
 
 /// caption | <
 Tabela 3 — Contribuições da equipe no foco de Artefatos Generalistas.
@@ -76,9 +76,9 @@ Fonte: Rodrigo Orlandi(Autor)
 | João Paulo       |    |    |   |
 | Fernando Gabriel | 1. Participação da implementação da Metodologia BPMN   |   Regular  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/c9d9a01fe8a395ea12e45d6a98fb288e4eb32e9e);  |
 | Júlio César      |  1. Participação da implementação da Metodologia BPMN  |  Regular  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
-| Matheus Ferreira |    |    |   |
+| Matheus Ferreira | 1. Participação da implementação da Metodologia BPMN   | Boa   | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
 | Vitor Pereira    |    |    |   |
-| Igor Thiago      |    |    |   |
+| Igor Thiago      | 1. Participação da implementação da Metodologia BPMN   | Boa   | 1. Implementação [neste commit]( https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/89d6f788f097506407fed1501ebb8a9eab7bbf6b);  |
 
 /// caption | <
 Tabela 4 — Contribuições da equipe no foco de Modelagem BPNM.
@@ -95,3 +95,4 @@ Fonte: Rodrigo Orlandi(Autor)
 | 1.1    | Adição Parte Júlio | [Julio Cesar](https://github.com/Julio1099) | | 11/04/2025 | |
 | 1.2    | Adição Parte fernando | [Fernando Gabriel](https://github.com/show-dawn) | | 11/04/2025 | |
 | 1.3    | Adição Parte João Marques | [Joao Victor Marques](https://github.com/jmarquees) | | 11/04/2025 | |
+| 1.4    | Adição Parte Matheus e Igor | [Matheus Ferreira](https://github.com/matferreira1) | | 11/04/2025 | |
