--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -50,8 +50,8 @@ Fonte: Rodrigo Orlandi(Autor)
 | Henrique Galdino |    |    |   |
 | João Marques     |1. Participação na realização do Rich Picture; 2. Participação da implementação do Glossário e seu documento.    | Regular   | Implementação  [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/2be71ebafa3e3bd83ded05c7c74b73adf2a4033e);  |
 | João Paulo       |    |    |   |
-| Fernando Gabriel | 1. Participação da implementação do Diagrama Causa-Efeito    |  Regular   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);   |
-| Júlio César      |  1. Participação da implementação do Diagrama Causa-Efeito  |  Regular  |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);  |
+| Fernando Gabriel | 1. Participação da implementação do Diagrama Causa-Efeito    |  Boa   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);   |
+| Júlio César      |  1. Participação da implementação do Diagrama Causa-Efeito  |  Boa  |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);  |
 | Matheus Ferreira | 1. Participação da implementação do Glossário   | Boa   | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5bcb433188cbbfaf8af03e171355b91e287ff2c5);  |
 | Vitor Pereira    |    |    |   |
 | Igor Thiago      | 1. Participação da implementação do Plano de Riscos   | Boa   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/e8241803e61ff927d820d3e6d417741f061fb3d1);  |
@@ -74,8 +74,8 @@ Fonte: Rodrigo Orlandi(Autor)
 | Henrique Galdino |    |    |   |
 | João Marques     |    |    |   |
 | João Paulo       |    |    |   |
-| Fernando Gabriel | 1. Participação da implementação da Metodologia BPMN   |   Regular  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/c9d9a01fe8a395ea12e45d6a98fb288e4eb32e9e);  |
-| Júlio César      |  1. Participação da implementação da Metodologia BPMN  |  Regular  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
+| Fernando Gabriel | 1. Participação da implementação da Metodologia BPMN   |   Boa  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/c9d9a01fe8a395ea12e45d6a98fb288e4eb32e9e);  |
+| Júlio César      |  1. Participação da implementação da Metodologia BPMN  |  Boa  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
 | Matheus Ferreira | 1. Participação da implementação da Metodologia BPMN   | Boa   | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
 | Vitor Pereira    |    |    |   |
 | Igor Thiago      | 1. Participação da implementação da Metodologia BPMN   | Boa   | 1. Implementação [neste commit]( https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/89d6f788f097506407fed1501ebb8a9eab7bbf6b);  |
