removendo caracteres a mais no histórico

--- a/docs/Base/1.2.7.PlanoRisco.md
+++ b/docs/Base/1.2.7.PlanoRisco.md
@@ -78,3 +78,4 @@ Os riscos foram identificados e categorizados conforme a estrutura analítica de
 | -      | -                          | -               | -       | -          | -                   |
 | 1.0    | Elaboração do documento | [Igor Thiago](https://github.com/Igor-Thiago) e [Henrique Galdino](https://github.com/hgaldino05)| | 11/04/2025 | |
 | 1.1    | Complementando o EAR com a Identificação de riscos | [Igor Thiago](https://github.com/Igor-Thiago) e [Henrique Galdino](https://github.com/hgaldino05)| | 11/04/2025 | |
+| 1.2    | Removendo caracteres extras | [Henrique Galdino](https://github.com/hgaldino05)| [Igor Thiago](https://github.com/Igor-Thiago) | 11/04/2025 | |
