--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -45,7 +45,7 @@ Fonte: Rodrigo Orlandi(Autor)
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
-| Rodrigo Orlandi |  1. Participação na implementação do documento de Rich Pictures e na realização; <br> 2. Implementação do 5W2H e de seu artefato <br> 3. Elaboração de documentos de apoio para o projeto; <br> 4. Correções gerais. | Boa |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 2. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/61aa8c4b736dca9dc1fdbabe84ff4cee676cd871); <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing);  Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link); <br> 4. Adição de texto e referência no [mapa mental](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/508d688bccdbaaf4fd3e03633f6b074df8fb1dae) e criação do [documento de participação](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ea25762217d9f3c0056c558af6b01915c4adc959)   |
+| Rodrigo Orlandi |  1. Participação na implementação do documento de Rich Pictures e na realização; <br> 2. Implementação do 5W2H e de seu artefato <br> 3. Elaboração de documentos de apoio para o projeto; <br> 4. Correções gerais. | Excelente |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 2. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/61aa8c4b736dca9dc1fdbabe84ff4cee676cd871); <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing);  Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link); <br> 4. Adição de texto e referência no [mapa mental](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/508d688bccdbaaf4fd3e03633f6b074df8fb1dae) e criação do [documento de participação](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ea25762217d9f3c0056c558af6b01915c4adc959)   |
 | Rodrigo Gontijo  |    |    |   |
 | Henrique Galdino |    |    |   |
 | João Marques     |1. Participação na realização do Rich Picture; 2. Participação da implementação do Glossário e seu documento.    | Regular   | Implementação  [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/2be71ebafa3e3bd83ded05c7c74b73adf2a4033e);  |
