--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -21,7 +21,7 @@ Comprobatórios se darão na forma de links aos commits realizados no Github, os
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
-| Rodrigo Orlandi | 1. Participação na fase de Unpack; <br> 2. Participação na fase de Sketch; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch [link - ADICIONAR DEPOIS DO COMMIT]; <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing) |
+| Rodrigo Orlandi | 1. Participação na fase de Unpack; <br> 2. Participação na fase de Sketch/Rich Picture antes da reorganização de arquivos; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch conforme [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing) |
 | Rodrigo Gontijo  |    |    |   |
 | Henrique Galdino |    |    |   |
 | João Marques     |1. Participação na fase de Unpack; 2. Participação na fase de Protótipo    | Boa   | 1. Reunião gravada pelo Google Meet do dia 07/04/2025 conforme [link](https://youtu.be/E5UFk_MEU1g?si=38y0W7haSOCdGYPK); <br> 2. Commit disponível em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/91316d340b470e88069ff86bb6d738b78fab9dbb), [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/8b8ff1844cfa689e8512e9abfec56e040ac2a45f) e [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/7e9a7887a66bd81e9cd2b7f7b620f6afdbca9477) |
