--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -72,7 +72,7 @@ Fonte: Rodrigo Orlandi(Autor)
 | Rodrigo Orlandi  | 1. Realização do Diagrama BPMN Principal   |  Boa  | 1. Demonstrado pela issue com commit [neste link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues/23)  |
 | Rodrigo Gontijo  |    |    |   |
 | Henrique Galdino |    |    |   |
-| João Marques     | 1. Realização do Diagrama BPMN Principal   |  Boa  |   |
+| João Marques     | 1. Realização do Diagrama BPMN Principal   |  Boa  | 1. Demonstrado pela issue com commit [neste link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues/23)  |
 | João Paulo       |    |    |   |
 | Fernando Gabriel | 1. Participação da implementação da Metodologia BPMN   |   Boa  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/c9d9a01fe8a395ea12e45d6a98fb288e4eb32e9e);  |
 | Júlio César      |  1. Participação da implementação da Metodologia BPMN  |  Boa  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
