add parte hernique contribuição

--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -21,19 +21,14 @@ Comprobatórios se darão na forma de links aos commits realizados no Github, os
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
-| Rodrigo Orlandi | 1. Participação na fase de Unpack; <br> 2. Participação na fase de Sketch; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch [link - ADICIONAR DEPOIS DO COMMIT]; <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing), Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link) |
+| Rodrigo Orlandi | 1. Participação na fase de Unpack; <br> 2. Participação na fase de Sketch/Rich Picture antes da reorganização de arquivos; <br> 3. Elaboração de documentos de apoio para o projeto.          | Excelente   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch conforme [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing)  |
 | Rodrigo Gontijo  |    |    |   |
-| Henrique Galdino |    |    |   |
+| Henrique Galdino |1. Participação na fase de Unpack; <br> 2. Participação na fase de Protótipo;  |  Excelente  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA);  <br> 2. Commit disponível em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ef682c314bcf959dff4984982ad98e79cee9fb59), [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f372841857d93e1e8148b0d08e56d6efefb58834) |
 | João Marques     |1. Participação na fase de Unpack; 2. Participação na fase de Protótipo    | Boa   | 1. Reunião gravada pelo Google Meet do dia 07/04/2025 conforme [link](https://youtu.be/E5UFk_MEU1g?si=38y0W7haSOCdGYPK); <br> 2. Commit disponível em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/91316d340b470e88069ff86bb6d738b78fab9dbb), [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/8b8ff1844cfa689e8512e9abfec56e040ac2a45f) e [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/7e9a7887a66bd81e9cd2b7f7b620f6afdbca9477) |
 | João Paulo       |    |    |   |
 | Fernando Gabriel |1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision    |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)    |
 | Júlio César      |   1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision  |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)  |
 | Matheus Ferreira | 1. Participação na fase de Test/Validate   | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g); <br> 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ef173fa69101686d2a1e8612af48a32f4cb07189)  |
-| Vitor Pereira    |    |    |   |
-| Igor Thiago      | 1. Participação na fase de Test/Validate   | Boa    | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ef173fa69101686d2a1e8612af48a32f4cb07189) |
-| Fernando Gabriel |1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision    |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)    |
-| Júlio César      |   1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision  |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)  |
-| Matheus Ferreira | 1. Participação na fase de Test/Validate   | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ef173fa69101686d2a1e8612af48a32f4cb07189)  |
 | Vitor Pereira    | 1. Participação na fase de Unpack; <br>  2. Brainstorming  |  Boa  |1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA);  <br> 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/967de327511154d3d594f9d4c3472651fbedb42c)  |
 | Igor Thiago      | 1. Participação na fase de Test/Validate   | Boa    | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ef173fa69101686d2a1e8612af48a32f4cb07189) |
 
@@ -50,16 +45,16 @@ Fonte: Rodrigo Orlandi(Autor)
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
-| Rodrigo Orlandi |  1. Participação na implementação do documento de Rich Pictures e na realização; <br> 2. Implementação do 5W2H e de seu artefato <br> 3. Elaboração de documentos de apoio para o projeto. | Boa |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 2. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/61aa8c4b736dca9dc1fdbabe84ff4cee676cd871); <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing) |
+| Rodrigo Orlandi |  1. Participação na implementação do documento de Rich Pictures e na realização; <br> 2. Implementação do 5W2H e de seu artefato <br> 3. Elaboração de documentos de apoio para o projeto; <br> 4. Correções gerais. | Excelente |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 2. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/61aa8c4b736dca9dc1fdbabe84ff4cee676cd871); <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing);  Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link); <br> 4. Adição de texto e referência no [mapa mental](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/508d688bccdbaaf4fd3e03633f6b074df8fb1dae) e criação do [documento de participação](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ea25762217d9f3c0056c558af6b01915c4adc959)   |
 | Rodrigo Gontijo  |    |    |   |
-| Henrique Galdino |    |    |   |
+| Henrique Galdino | 1. Participação na realização do Plano de Riscos   | Boa   |  1. Implementação conforme [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/3d0bfe38c591fca4d5811758ea8ccca32050ee34), [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/824ff5cd7d09d027fb8dd52230d5a479b41fd575) e [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/792eafc9d7aa1e778e74c15f376297707f88445c) |
 | João Marques     |1. Participação na realização do Rich Picture; 2. Participação da implementação do Glossário e seu documento.    | Regular   | Implementação  [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/2be71ebafa3e3bd83ded05c7c74b73adf2a4033e);  |
 | João Paulo       |    |    |   |
 | Fernando Gabriel | 1. Participação da implementação do Diagrama Causa-Efeito    |  Boa   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);   |
 | Júlio César      |  1. Participação da implementação do Diagrama Causa-Efeito  |  Boa  |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);  |
 | Matheus Ferreira | 1. Participação da implementação do Glossário   | Boa   | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5bcb433188cbbfaf8af03e171355b91e287ff2c5);  |
 | Vitor Pereira    | 1. Participação na implementação do documento de Mapa Mental;  | Boa   | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/df514153644ed091a81bb51dd6f066b5bc8fa228);  |
-| Igor Thiago      | 1. Participação da implementação do Plano de Riscos   | Boa   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/e8241803e61ff927d820d3e6d417741f061fb3d1);  |
+| Igor Thiago      | 1. Participação da implementação do Plano de Riscos e Estimativas de Custo  | Boa   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/e8241803e61ff927d820d3e6d417741f061fb3d1);  |
 
 /// caption | <
 Tabela 3 — Contribuições da equipe no foco de Artefatos Generalistas.
@@ -74,10 +69,10 @@ Fonte: Rodrigo Orlandi(Autor)
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
-| Rodrigo Orlandi  |    |    |   |
+| Rodrigo Orlandi  | 1. Realização do Diagrama BPMN Principal   |  Boa  | 1. Demonstrado pela issue com commit [neste link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues/23)  |
 | Rodrigo Gontijo  |    |    |   |
-| Henrique Galdino |    |    |   |
-| João Marques     |    |    |   |
+| Henrique Galdino | 1. Realização do Diagrama BPMN Login e Moderar   | Boa   | 1. Implementação [neste commit](MUDA AQUI RODRIGO)  |
+| João Marques     | 1. Realização do Diagrama BPMN Principal   |  Boa  | 1. Demonstrado pela issue com commit [neste link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues/23)  |
 | João Paulo       |    |    |   |
 | Fernando Gabriel | 1. Participação da implementação da Metodologia BPMN   |   Boa  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/c9d9a01fe8a395ea12e45d6a98fb288e4eb32e9e);  |
 | Júlio César      |  1. Participação da implementação da Metodologia BPMN  |  Boa  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
@@ -101,3 +96,5 @@ Fonte: Rodrigo Orlandi(Autor)
 | 1.2    | Adição Parte fernando | [Fernando Gabriel](https://github.com/show-dawn) | | 11/04/2025 | |
 | 1.3    | Adição Parte João Marques | [Joao Victor Marques](https://github.com/jmarquees) | | 11/04/2025 | |
 | 1.4    | Adição Parte Matheus e Igor | [Matheus Ferreira](https://github.com/matferreira1) | | 11/04/2025 | |
+| 1.5    | Adição Parte Rodrigo Orlandi | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | | 11/04/2025 | |
+| 1.6    | Adição Parte Henrique Galdino | [Henrique Galdino](https://github.com/hgaldino05) | | 11/04/2025 | |
