add contribuicoes rodrigo gontijo

--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -1,20 +1,5 @@
 # 1.4. Participações (Base)
 
-Este documento esclarecerá as participações da equipe referentes à primeira entrega do projeto. Sua divisão é dada em tabelas de cada foco da Entrega 1 - [Design Sprint](1.1.DesignSprint.md#11-módulo-design-sprint), [Artefatos Generalistas](1.2.ArtefatoGeneralista.md#12-módulo-artefato-generalista) e a [modelagem dos Diagramas BPNM](#módulo-modelagem-bpmn-foco_3]), respectivamente. As tabelas são divididas da seguinte maneira:
-
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
-|---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
-| Fulano  |  1. Participação nas Etapas da Design Sprint elaborando artefatos | Boa | Registro nos Versionamentos do Documento de Design Sprint, conforme (link) |
-
-/// caption | <
-Tabela 1 — Exemplo de aplicação da participação do membro pela tabela no respectivo foco do projeto.
-///
-/// caption
-Fonte: Profa. Milene Serrano
-///
-
-Comprobatórios se darão na forma de links aos commits realizados no Github, os autores de cada documento e, quando necessário, link às gravações de reuniões realizadas no YouTube.
-
 <br>
 
 ## Foco 1 - Módulo de Design Sprint
@@ -22,7 +7,7 @@ Comprobatórios se darão na forma de links aos commits realizados no Github, os
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
 | Rodrigo Orlandi | 1. Participação na fase de Unpack; <br> 2. Participação na fase de Sketch/Rich Picture antes da reorganização de arquivos; <br> 3. Elaboração de documentos de apoio para o projeto.          | Excelente   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch conforme [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing)  |
-| Rodrigo Gontijo  |    |    |   |
+| Rodrigo Gontijo  | 1. Unpack - Elaboração do documento e participação da reunião do unpack; <br> 2. Sketch - Elaboração do documento e participação da reunião do sketch.   |  Excelente  | Unpack - [commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/967de327511154d3d594f9d4c3472651fbedb42c); <br> Sketch - [commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/76da1797825c1dbc1c4eb1e2376c8f6e024c49e2) |
 | Henrique Galdino |1. Participação na fase de Unpack; <br> 2. Participação na fase de Protótipo;  |  Excelente  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA);  <br> 2. Commit disponível em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ef682c314bcf959dff4984982ad98e79cee9fb59), [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f372841857d93e1e8148b0d08e56d6efefb58834) |
 | João Marques     |1. Participação na fase de Unpack; 2. Participação na fase de Protótipo    | Boa   | 1. Reunião gravada pelo Google Meet do dia 07/04/2025 conforme [link](https://youtu.be/E5UFk_MEU1g?si=38y0W7haSOCdGYPK); <br> 2. Commit disponível em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/91316d340b470e88069ff86bb6d738b78fab9dbb), [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/8b8ff1844cfa689e8512e9abfec56e040ac2a45f) e [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/7e9a7887a66bd81e9cd2b7f7b620f6afdbca9477) |
 | João Paulo       |    |    |   |
@@ -46,7 +31,7 @@ Fonte: Rodrigo Orlandi(Autor)
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
 | Rodrigo Orlandi |  1. Participação na implementação do documento de Rich Pictures e na realização; <br> 2. Implementação do 5W2H e de seu artefato <br> 3. Elaboração de documentos de apoio para o projeto; <br> 4. Correções gerais. | Excelente |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 2. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/61aa8c4b736dca9dc1fdbabe84ff4cee676cd871); <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing);  Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link); <br> 4. Adição de texto e referência no [mapa mental](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/508d688bccdbaaf4fd3e03633f6b074df8fb1dae) e criação do [documento de participação](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/ea25762217d9f3c0056c558af6b01915c4adc959)   |
-| Rodrigo Gontijo  |    |    |   |
+| Rodrigo Gontijo  | 1. Mapa mental - Elaboração do documento; <br> 2. Rich Picture - Elaboração do documento e participação da reunião de desenvolvimento dos rich pictures; <br> 3. Glossário - Revisão e adição de palavras    | Excelente   | Mapa Mental - [commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/df514153644ed091a81bb51dd6f066b5bc8fa228); <br> Rich Picture - [commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/91f585b98616921c0b694b0eb87c9f01a1c847fc); <br> 3 -[ Glossário](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/b0047b3a0fbc6f366d89a615f0034690078dfcde)  |
 | Henrique Galdino | 1. Participação na realização do Plano de Riscos   | Boa   |  1. Implementação conforme [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/3d0bfe38c591fca4d5811758ea8ccca32050ee34), [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/824ff5cd7d09d027fb8dd52230d5a479b41fd575) e [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/792eafc9d7aa1e778e74c15f376297707f88445c) |
 | João Marques     |1. Participação na realização do Rich Picture; 2. Participação da implementação do Glossário e seu documento.    | Regular   | Implementação  [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/2be71ebafa3e3bd83ded05c7c74b73adf2a4033e);  |
 | João Paulo       |    |    |   |
@@ -70,7 +55,7 @@ Fonte: Rodrigo Orlandi(Autor)
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
 | Rodrigo Orlandi  | 1. Realização do Diagrama BPMN Principal   |  Boa  | 1. Demonstrado pela issue com commit [neste link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues/23)  |
-| Rodrigo Gontijo  |    |    |   |
+| Rodrigo Gontijo  | 1. Elaboração do BPMN de login; <br> 2. Elaboração do BPMN de moderar.   |  Boa  | BPMNs - [commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/d42b72a6984f7cf7f8d60400805912e9ccd0512f).  |
 | Henrique Galdino | 1. Realização do Diagrama BPMN Login e Moderar   | Boa   | 1. Implementação [neste commit](MUDA AQUI RODRIGO)  |
 | João Marques     | 1. Realização do Diagrama BPMN Principal   |  Boa  | 1. Demonstrado pela issue com commit [neste link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues/23)  |
 | João Paulo       |    |    |   |
@@ -98,3 +83,5 @@ Fonte: Rodrigo Orlandi(Autor)
 | 1.4    | Adição Parte Matheus e Igor | [Matheus Ferreira](https://github.com/matferreira1) | | 11/04/2025 | |
 | 1.5    | Adição Parte Rodrigo Orlandi | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | | 11/04/2025 | |
 | 1.6    | Adição Parte Henrique Galdino | [Henrique Galdino](https://github.com/hgaldino05) | | 11/04/2025 | |
+| 1.6    | Adição Parte Rodrigo Gontijo | [Rodrigo Gontijo](https://github.com/rodrigogontijoo) | | 11/04/2025 | |
+
